syntax = "proto3";

package user.v1;

// import "role.proto";

message GetUserRequest {
  string id = 1;
}

message FindByEmailRequest {
  string email = 1;
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string role = 3; // Should match UserRole enum in role.proto
  string phone = 4;
  string password = 5;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4; // Should match UserRole enum in role.proto
  string phone = 5;
  string createdAt = 6;
  string hashedPassword = 7; // For internal use only, should not be exposed in APIs
}

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc FindByEmail(FindByEmailRequest) returns (UserResponse);
}
